<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Main" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="1"
        android:showAsAction="never" />

    <item android:id="@+id/menu_refresh"
          android:title="@string/menu_refresh"
          android:checkable="true"
          android:orderInCategory="100"
          android:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_scan"
          android:title="@string/menu_scan"
          android:orderInCategory="101"
          android:showAsAction="ifRoom|withText"/>

    <item android:id="@+id/menu_stop"
          android:title="@string/menu_stop"
          android:orderInCategory="102"
          android:showAsAction="ifRoom|withText"/>


</menu>
