<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="10dp"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_device_address"
            android:textSize="18sp"/>
        
        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        
        <TextView
            android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"
            android:textSize="18sp"/>
        
        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/connection_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:textSize="18sp"/>
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_data"
            android:textSize="18sp"/>
        
        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/data_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textSize="18sp"/>

        </LinearLayout>
    
    <TextView
        android:id="@+id/isSerial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_serial"
        android:textSize="18sp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"/>
    
    <TextView
        android:id="@+id/textView1"
        android:text="@string/red_slide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall"/>
    
    <SeekBar
        android:id="@+id/seekRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"/>
    
    <TextView
        android:id="@+id/textView2"
        android:text="@string/blue_slide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall"/>

    <SeekBar
        android:id="@+id/seekBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"/>

    <TextView
        android:id="@+id/textView3"
        android:text="@string/green_slide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall"/>

    <SeekBar
        android:id="@+id/seekGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"/>

</LinearLayout>